ubah index file

--- a/vid.html
+++ b/vid.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <ul>
-    <li><a href="bbiodata css.html">Home </a></li>
+    <li><a href="index.html">Home </a></li>
 	<li><a href="biodata.html">Biodata </a></li>
 	<li><a href="hobi.html">Hobi</a></li>
 	<li class="dropdown">
@@ -35,7 +35,7 @@
 	<video width="940px" height="490px"
 		controls="controls"/>
 		
-		<source src="pr1.mp4"
+		<source src="img/pr1.mp4"
 			type="video/mp4">
 	</video>
 <div class="desk"></div>
