--- a/2d.html
+++ b/2d.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <ul>
-    <li><a href="bbiodata css.html">Home </a></li>
+    <li><a href="index.html">Home </a></li>
 	<li><a href="biodata.html">Biodata </a></li>
 	<li><a href="hobi.html">Hobi</a></li>
 	<li class="dropdown">
