--- a/desain.html
+++ b/desain.html
@@ -7,7 +7,7 @@
  
 
 <ul>
-    <li><a href="bbiodata css.html">Home </a></li>
+    <li><a href="index.html">Home </a></li>
 	<li><a href="biodata.html">Biodata </a></li>
 	<li><a href="hobi.html">Hobi</a></li>
 	<li class="dropdown">
