--- a/sosmed.html
+++ b/sosmed.html
@@ -6,7 +6,7 @@
 <body>
 
 <ul>
-     <li><a href="bbiodata css.html">Home </a></li>
+     <li><a href="index.html">Home </a></li>
 	<li><a href="biodata.html">Biodata </a></li>
 	<li><a href="hobi.html">hobi </a></li>
 	<li class="dropdown">
